# keepassxc-develop2

./: CMakeCache.txt  CMakeLists.txt
cmake/: GenerateProductVersion.cmake  VersionInfo.in  VersionResource.rc
docs/: GettingStarted.adoc
docs/topics/: .sharedheader  AutoType.adoc  BrowserPlugin.adoc  DatabaseOperations.adoc  ImportExport.adoc  KeeShare.adoc  KeyboardShortcuts.adoc  PasswordGenerator.adoc  Reference.adoc  SSHAgent.adoc  UserInterface.adoc
share/windows/: KPXC_ExitDlg.wxs  KPXC_InstallDir.wxs  KPXC_InstallDirDlg.wxs
src/: CMakeLists.txt
src/autotype/: AutoTypeSelectDialog.ui  PickcharsDialog.cpp  PickcharsDialog.h  PickcharsDialog.ui
src/cli/: Command.cpp  DatabaseCommand.cpp
src/gui/: GuiTools.cpp  GuiTools.h
src/gui/entry/: EditEntryWidgetMain.ui
src/gui/osutils/nixutils/: X11Funcs.cpp  X11Funcs.h
src/gui/widgets/: KPToolBar.cpp  KPToolBar.h
src/keeshare/: ShareExport.cpp  ShareExport.h  ShareImport.cpp  ShareImport.h
tests/: my_tests.cpp
tests/data/: FileKeyXml.key  FileKeyXmlBrokenBase64.key  NewDatabase.xml  hibp.txt
utils/: transifex_translators.py
